<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/id_planpro_title_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plan_title_label" />

    <EditText
        android:id="@+id/id_planpro_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_planpro_title_label"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/plan_title_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/id_planpro_detail_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_planpro_title"
        android:text="细节" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_planpro_title"
        android:layout_below="@+id/id_planpro_detail_label"
        android:inputType="textMultiLine"
        android:lines="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/editText1">

        <Button
            android:id="@+id/id_planpro_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_label" />

        <Button
            android:id="@+id/id_planpro_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:text="@string/sure_label" />

    </LinearLayout>

</RelativeLayout>