<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/id_plan_title_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plan_title_label" />

    <EditText
        android:id="@+id/id_plan_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_plan_title_label"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/plan_title_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/id_plan_time"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_plan_title"
        android:text="@string/plan_time_label" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/id_plan_time" >

        <TextView
            android:id="@+id/id_plan_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan_start_time_label" />

        <Button
            android:id="@+id/id_plan_start_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1" >

        <TextView
            android:id="@+id/id_plan_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan_end_time_label" />

        <Button
            android:id="@+id/id_plan_end_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/id_plan_detail_label"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="细节" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/id_plan_project_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="从属项目" />

            <Spinner
                android:id="@+id/id_plan_project_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="事件笔记" />

            <EditText
                android:id="@+id/id_plan_editnote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="2" 
                android:inputType="textMultiLine" />
            
        </LinearLayout>

        <CheckBox
            android:id="@+id/id_plan_solved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/plan_solved_label" />
    </LinearLayout>

    <Button
        android:id="@+id/id_plan_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/id_plan_delete"
        android:layout_alignBottom="@+id/id_plan_delete"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/id_plan_delete"
        android:text="@string/sure_label" />

    <Button
        android:id="@+id/id_plan_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_plan_title"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="33dp"
        android:text="@string/delete_label" />

</RelativeLayout>